# jj-pre-push

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/jj_pre_push/: bookmark_updates.py  cli.py  jj.py
tests/: test_command.py  test_parse.py
